--- a/src/app/pages/game-list/components/game-card/game-card.component.html
+++ b/src/app/pages/game-list/components/game-card/game-card.component.html
@@ -1,27 +1,12 @@
-<div
-  class="w-full md:w-40 overflow-hidden flex flex-wrap items-center group bg-gray-800 text-white md:rounded-xl justify-center"
-  (click)="gotoGame()"
->
+<div class="bg-[#2E3650] rounded-xl py-4 px-2 flex flex-wrap justify-center shadow-[0px_0px_4px_rgba(0,0,0,0.25)]">
+  <p class="w-full text-[#B1B9D8] font-bold text-center">
+    {{ game.title }}
+  </p>
 
-<div class="z-20 p-4 bg-gray-800 opacity-90 h-full w-full">
-    <h1 class="w-full md:text-center font-bold">
-      {{ game.title }}
-    </h1>
-  
-    <div class="w-full flex items-center mt-4">
-      <img
-        class="rounded-full w-8 h-8"
-        src="../../../../../assets/default.jpg"
-        alt=""
-      />
-  
-      <p class="text-sm font-bold mx-2">You: {{ game.score }}</p>
-    </div>
-</div>
+  <!-- ? Icon -->
+   <img class="w-20 h-20 my-4 rounded-full" src="{{game.image}}" [alt]="game.title">
 
-<!-- ? Game icon -->
-  <h3
-    [class]="'block md:hidden z-10 opacity-5 absolute right-4 text-[6.5rem] icon text-center ' + game.icon"
-    [ngClass]="{ 'animate-pulse': game.isNew }"
-  ></h3>
+  <button class="w-full rounded-md font-bold bg-[#242B42] text-[#7F88A9] py-2" (click)="gotoGame()">
+  {{game.buttonText}}
+  </button>
 </div>
