--- a/src/app/pages/tic-tac-toe/tic-tac-toe.component.html
+++ b/src/app/pages/tic-tac-toe/tic-tac-toe.component.html
@@ -1,14 +1,14 @@
 <div
-  class="bg-gray-800 flex flex-wrap justify-center text-center h-[100dvh] content-between"
+  class="bg-[#2E3650] flex flex-wrap justify-center text-center h-[100dvh] content-between"
 >
   <!-- ? Header -->
   <div
     class="flex w-full items-center justify-between p-4 border-b-2 border-gray-400 border-opacity-20"
   >
-    <button class="text-white" (click)="goBack()">
+    <button class="text-gray-100" (click)="goBack()">
       <span class="icon arrow-left text-2xl"></span>
     </button>
-    <h1 class="text-3xl text-white font-bold">Tic-Tac-Toe</h1>
+    <h1 class="text-3xl text-gray-100 font-bold">Tic-Tac-Toe</h1>
   </div>
 
   <!-- ? Game Container -->
@@ -19,12 +19,12 @@
     <div class="inline-block">
       @for (row of board; track row; let i = $index) { @if(i > 0){
       <div
-        class="border-b-4 rounded-xl opacity-40 shadow-sm border-gray-50"
+        class="border-b-4 rounded-xl opacity-40 shadow-sm border-[#B1B9D8]"
       ></div>
       }
       <div class="flex">
         @for (cell of row; track cell; let j = $index) { @if(j > 0){
-        <div class="border-l-4 rounded-xl opacity-30 border-gray-50"></div>
+        <div class="border-l-4 rounded-xl opacity-30 border-[#B1B9D8]"></div>
         }
         <div
           class="w-16 h-16 flex items-center justify-center cursor-pointer text-2xl"
