--- a/src/app/pages/snake/snake.component.html
+++ b/src/app/pages/snake/snake.component.html
@@ -1,1 +1,18 @@
-<p>snake works!</p>
+<div
+  class="bg-[#2E3650] flex flex-wrap justify-center text-center h-[100dvh] content-between"
+>
+  <!-- ? Header -->
+  <div
+    class="flex w-full items-center justify-between p-4 border-b-2 border-gray-400 border-opacity-20"
+  >
+    <button class="text-gray-100" (click)="goBack()">
+      <span class="icon arrow-left text-2xl"></span>
+    </button>
+    <h1 class="text-3xl text-gray-100 font-bold">Snake</h1>
+  </div>
+
+  <div class="flex flex-wrap w-full content-center justify-center h-[calc(100dvh-70px)] relative ">
+      <canvas id="board"></canvas>
+  </div>
+
+</div>
