--- a/src/app/pages/snake/snake.component.html
+++ b/src/app/pages/snake/snake.component.html
@@ -11,8 +11,45 @@
     <h1 class="text-3xl text-gray-100 font-bold">Snake</h1>
   </div>
 
-  <div class="flex flex-wrap w-full content-center justify-center h-[calc(100dvh-70px)] relative ">
-      <canvas id="board"></canvas>
-  </div>
+  <!-- ? Game Container -->
+  <div
+    class="flex flex-wrap w-full content-center justify-center h-[calc(100dvh-70px)] relative"
+  >
+    @if(gameOver){
+    <div
+      class="absolute top-0 left-0 w-full h-full flex flex-wrap items-center justify-center content-center bg-red-300"
+    >
+      <h1 class="w-full text-center text-3xl text-gray-100 font-bold">
+        Game Over
+      </h1>
+      <button
+        class="mt-4 text-white border-2 py-2 px-4 border-gray-100"
+        (click)="reloadGame()"
+      >
+        Reload
+      </button>
+    </div>
+    }
 
+    <!-- ? Board -->
+    <canvas id="board"></canvas>
+
+    <!-- ? controllers -->
+    @if (isMobile) {
+    <div class="w-full mt-4 grid grid-cols-4 gap-4">
+      @for (button of mobileControllers; track button) {
+      <div class="flex justify-center">
+        <button
+          class="flex items-center justify-center"
+          (click)="handleDirection(button.name)"
+        >
+          <span
+            [class]="button.icon + ' ' + 'text-[4rem] text-[#B1B9D8]'"
+          ></span>
+        </button>
+      </div>
+      }
+    </div>
+    }
+  </div>
 </div>
