--- a/src/assets/icons/icons.css
+++ b/src/assets/icons/icons.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?5t7f17');
-  src:  url('fonts/icomoon.eot?5t7f17#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?5t7f17') format('truetype'),
-    url('fonts/icomoon.woff?5t7f17') format('woff'),
-    url('fonts/icomoon.svg?5t7f17#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?p8wq2e');
+  src:  url('fonts/icomoon.eot?p8wq2e#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?p8wq2e') format('truetype'),
+    url('fonts/icomoon.woff?p8wq2e') format('woff'),
+    url('fonts/icomoon.svg?p8wq2e#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,18 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.arrow-circle-up:before {
+  content: "\e904";
+}
+.arrow-circle-right:before {
+  content: "\e905";
+}
+.arrow-circle-left:before {
+  content: "\e906";
+}
+.arrow-circle-down:before {
+  content: "\e907";
+}
 .play:before {
   content: "\e903";
 }
